<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single"/>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/item4"
                    android:icon="@drawable/user"
                    android:title="@string/title_4" />

                <item
                    android:id="@+id/item5"
                    android:icon="@drawable/list"
                    android:title="@string/title_5" />

                <item
                    android:id="@+id/item6"
                    android:icon="@drawable/search"
                    android:title="@string/title_6" />

                <item
                    android:id="@+id/item7"
                    android:icon="@drawable/page"
                    android:title="@string/title_7" />

                <item
                    android:id="@+id/item8"
                    android:icon="@drawable/ic_baseline_favorite_24"
                    android:title="@string/title_8" />
                <item
                    android:id="@+id/item3"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"
                    android:title="@string/title_3" />

            </menu>
        </item>
    </group>
</menu>